apps/flappy-fun/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flappy-fun
  annotations:
    kubernetes.io/ingress.class: nginx
    argocd.argoproj.io/health-check: ignore
spec:
  ingressClassName: nginx
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flappy-fun
                port:
                  number: 80
